# skylink

./: .gitignore  CMakeLists.txt  README.md  tasks.md
src/: main.cpp
src/backend/: AirlineGraph.cpp  AirlineGraph.h  AlgorithmComparator.cpp  AlgorithmComparator.h  DataManager.h  DataParser.cpp  DataParser.h
src/backend/algorithms/: AStar.cpp  AStar.h  Algorithm.cpp  Algorithm.h  Dijkstra.cpp  Dijkstra.h
src/backend/datamodels/: Airport.h  AirportRoute.h  AlgorithmResult.h  FlightRouteStatistics.h  SkylinkGraph.h  WeightType.h
src/backend/graph-generator/: AddAirportLocationData.h  DeleteDisconnectedRoutes.h  GenerateGraphFiles.cpp  LoadAirportCodes.h  LoadAirportRoutes.h
src/frontend/: frontend.cpp  frontend.h
src/frontend/graph-visualization/: GraphVisualization.cpp  GraphVisualization.h  VisualizationConfig.h
src/frontend/window/: TestWindow.h  Window.h  WindowManager.h  WindowNames.h  WindowSignal.h
src/frontend/window/components/: Button.h  Textbox.h
src/frontend/window/windows/: PrimaryWindow.h  ResultWindow.h
test/: test.cpp  test_astar.cpp  test_comparator.cpp  test_dijkstra.cpp  test_graph.cpp  test_parser.cpp
